[gd_scene load_steps=10 format=3 uid="uid://bnd83ilfgkupl"]

[ext_resource type="Script" path="res://script/florest_scene.gd" id="1_bq1m7"]
[ext_resource type="PackedScene" uid="uid://cmkyt4hcorr3y" path="res://scenes/player.tscn" id="1_hkoe8"]
[ext_resource type="PackedScene" uid="uid://dntwuhklfyvp2" path="res://scenes/passage_area.tscn" id="2_1ddcw"]
[ext_resource type="PackedScene" uid="uid://buwo4i7mxxfv3" path="res://scenes/hud.tscn" id="3_e0pml"]
[ext_resource type="Texture2D" uid="uid://dawkn5dsjblm1" path="res://assets/tree_tilemap.png" id="3_tqvn5"]
[ext_resource type="PackedScene" uid="uid://dy5vyatq360dc" path="res://scenes/pause_menu.tscn" id="4_ema30"]
[ext_resource type="PackedScene" uid="uid://btm5fg74xn1qh" path="res://scenes/game_over_screen.tscn" id="6_3gcfr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d5d7h"]
texture = ExtResource("3_tqvn5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
16:6/0 = 0
17:6/0 = 0
20:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
0:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0

[sub_resource type="TileSet" id="TileSet_v5085"]
sources/0 = SubResource("TileSetAtlasSource_d5d7h")

[node name="florest" type="Node2D"]
script = ExtResource("1_bq1m7")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_v5085")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 524288, 0, 65536, 524288, 1, 131072, 524288, 0, 196608, 524288, 1, 262144, 524288, 0, 327680, 524288, 1, 393216, 524288, 0, 458752, 524288, 1, 524288, 524288, 0, 589824, 524288, 1, 655360, 524288, 0, 720896, 524288, 1, 786432, 524288, 0, 851968, 524288, 1, 917504, 524288, 0, 983040, 524288, 1, 1048576, 524288, 0, 1114112, 524288, 1, 1179648, 524288, 0, 1245184, 524288, 1, 1, 524288, 0, 65537, 524288, 1, 131073, 524288, 0, 196609, 524288, 1, 262145, 524288, 0, 327681, 524288, 1, 393217, 524288, 0, 458753, 524288, 1, 524289, 524288, 0, 589825, 524288, 1, 655361, 524288, 0, 720897, 524288, 1, 786433, 524288, 0, 851969, 524288, 1, 917505, 524288, 0, 983041, 524288, 1, 1048577, 524288, 0, 1114113, 524288, 1, 1179649, 524288, 0, 1245185, 524288, 1, 2, 524288, 0, 65538, 524288, 1, 131074, 524288, 0, 196610, 524288, 1, 262146, 524288, 0, 327682, 524288, 1, 393218, 524288, 0, 458754, 524288, 1, 524290, 524288, 0, 589826, 524288, 1, 655362, 524288, 0, 720898, 524288, 1, 786434, 524288, 0, 851970, 524288, 1, 917506, 524288, 0, 983042, 524288, 1, 1048578, 524288, 0, 1114114, 524288, 1, 1179650, 524288, 0, 1245186, 524288, 1, 3, 524288, 0, 65539, 524288, 1, 131075, 524288, 0, 196611, 524288, 1, 262147, 524288, 0, 327683, 524288, 1, 393219, 524288, 0, 458755, 524288, 1, 524291, 524288, 1, 589827, 524288, 1, 655363, 524288, 1, 720899, 524288, 1, 786435, 524288, 0, 851971, 524288, 1, 917507, 524288, 0, 983043, 524288, 1, 1048579, 524288, 0, 1114115, 524288, 1, 1179651, 524288, 0, 1245187, 524288, 1, 4, 524288, 0, 65540, 524288, 1, 131076, 524288, 0, 196612, 524288, 1, 262148, 524288, 0, 327684, 524288, 1, 393220, 524288, 0, 458756, 524288, 1, 524292, 524288, 1, 589828, 524288, 1, 655364, 524288, 1, 720900, 524288, 1, 786436, 524288, 0, 851972, 524288, 1, 917508, 524288, 0, 983044, 524288, 1, 1048580, 524288, 0, 1114116, 524288, 1, 1179652, 524288, 0, 1245188, 524288, 1, 5, 524288, 0, 65541, 524288, 1, 131077, 524288, 0, 196613, 524288, 1, 262149, 524288, 0, 327685, 524288, 1, 393221, 524288, 0, 458757, 524288, 1, 524293, 524288, 1, 589829, 524288, 1, 655365, 524288, 1, 720901, 524288, 1, 786437, 524288, 0, 851973, 524288, 1, 917509, 524288, 0, 983045, 524288, 1, 1048581, 524288, 0, 1114117, 524288, 1, 1179653, 524288, 0, 1245189, 524288, 1, 6, 524288, 0, 65542, 524288, 1, 131078, 524288, 0, 196614, 524288, 1, 262150, 524288, 0, 327686, 524288, 1, 393222, 524288, 0, 458758, 524288, 1, 524294, 524288, 0, 589830, 524288, 1, 655366, 524288, 0, 720902, 524288, 1, 786438, 524288, 0, 851974, 524288, 1, 917510, 524288, 1, 983046, 524288, 1, 1048582, 524288, 1, 1114118, 524288, 1, 1179654, 524288, 0, 1245190, 524288, 1, 7, 524288, 0, 65543, 524288, 1, 131079, 524288, 0, 196615, 524288, 1, 262151, 524288, 1, 327687, 524288, 1, 393223, 524288, 0, 458759, 524288, 1, 524295, 524288, 0, 589831, 524288, 1, 655367, 524288, 0, 720903, 524288, 1, 786439, 524288, 0, 851975, 524288, 1, 917511, 524288, 1, 983047, 524288, 1, 1048583, 524288, 1, 1114119, 524288, 1, 1179655, 524288, 0, 1245191, 524288, 1, 8, 524288, 0, 65544, 524288, 1, 131080, 524288, 0, 196616, 524288, 1, 262152, 524288, 1, 327688, 524288, 1, 393224, 524288, 0, 458760, 524288, 1, 524296, 524288, 0, 589832, 524288, 1, 655368, 524288, 0, 720904, 524288, 1, 786440, 524288, 0, 851976, 524288, 1, 917512, 524288, 1, 983048, 524288, 1, 1048584, 524288, 1, 1114120, 524288, 1, 1179656, 524288, 0, 1245192, 524288, 1, 9, 524288, 0, 65545, 524288, 1, 131081, 524288, 0, 196617, 524288, 1, 262153, 524288, 1, 327689, 524288, 1, 393225, 524288, 0, 458761, 524288, 1, 524297, 524288, 1, 589833, 524288, 1, 655369, 524288, 0, 720905, 524288, 1, 786441, 524288, 0, 851977, 524288, 1, 917513, 524288, 1, 983049, 524288, 1, 1048585, 524288, 1, 1114121, 524288, 1, 1179657, 524288, 0, 1245193, 524288, 1, 10, 524288, 0, 65546, 524288, 1, 131082, 524288, 0, 196618, 524288, 1, 262154, 524288, 0, 327690, 524288, 1, 393226, 524288, 0, 458762, 524288, 1, 524298, 524288, 1, 589834, 524288, 1, 655370, 524288, 0, 720906, 524288, 1, 786442, 524288, 0, 851978, 524288, 1, 917514, 524288, 1, 983050, 524288, 1, 1048586, 524288, 1, 1114122, 524288, 1, 1179658, 524288, 0, 1245194, 524288, 1, 11, 524288, 0, 65547, 524288, 1, 131083, 524288, 0, 196619, 524288, 1, 262155, 524288, 0, 327691, 524288, 1, 393227, 524288, 0, 458763, 524288, 1, 524299, 524288, 1, 589835, 524288, 1, 655371, 524288, 0, 720907, 524288, 1, 786443, 524288, 0, 851979, 524288, 1, 917515, 524288, 1, 983051, 524288, 1, 1048587, 524288, 1, 1114123, 524288, 1, 1179659, 524288, 0, 1245195, 524288, 1, 12, 524288, 0, 65548, 524288, 1, 131084, 524288, 0, 196620, 524288, 1, 262156, 524288, 0, 327692, 524288, 1, 393228, 524288, 0, 458764, 524288, 1, 524300, 524288, 0, 589836, 524288, 1, 655372, 524288, 0, 720908, 524288, 1, 786444, 524288, 0, 851980, 524288, 1, 917516, 524288, 1, 983052, 524288, 1, 1048588, 524288, 1, 1114124, 524288, 1, 1179660, 524288, 0, 1245196, 524288, 1, 13, 524288, 0, 65549, 524288, 1, 131085, 524288, 0, 196621, 524288, 1, 262157, 524288, 0, 327693, 524288, 1, 393229, 524288, 0, 458765, 524288, 1, 524301, 524288, 1, 589837, 524288, 1, 655373, 524288, 1, 720909, 524288, 1, 786445, 524288, 0, 851981, 524288, 1, 917517, 524288, 1, 983053, 524288, 1, 1048589, 524288, 1, 1114125, 524288, 1, 1179661, 524288, 0, 1245197, 524288, 1, 14, 524288, 0, 65550, 524288, 1, 131086, 524288, 0, 196622, 524288, 1, 262158, 524288, 0, 327694, 524288, 1, 393230, 524288, 0, 458766, 524288, 1, 524302, 524288, 1, 589838, 524288, 1, 655374, 524288, 1, 720910, 524288, 1, 786446, 524288, 0, 851982, 524288, 1, 917518, 524288, 0, 983054, 524288, 1, 1048590, 524288, 0, 1114126, 524288, 1, 1179662, 524288, 0, 1245198, 524288, 1, 15, 524288, 0, 65551, 524288, 1, 131087, 524288, 0, 196623, 524288, 1, 262159, 524288, 0, 327695, 524288, 1, 393231, 524288, 0, 458767, 524288, 1, 524303, 524288, 1, 589839, 524288, 1, 655375, 524288, 1, 720911, 524288, 1, 786447, 524288, 0, 851983, 524288, 1, 917519, 524288, 0, 983055, 524288, 1, 1048591, 524288, 0, 1114127, 524288, 1, 1179663, 524288, 0, 1245199, 524288, 1, 16, 524288, 0, 65552, 524288, 1, 131088, 524288, 0, 196624, 524288, 1, 262160, 524288, 0, 327696, 524288, 1, 393232, 524288, 0, 458768, 524288, 1, 524304, 524288, 1, 589840, 524288, 1, 655376, 524288, 1, 720912, 524288, 1, 786448, 524288, 0, 851984, 524288, 1, 917520, 524288, 0, 983056, 524288, 1, 1048592, 524288, 0, 1114128, 524288, 1, 1179664, 524288, 0, 1245200, 524288, 1, 17, 524288, 0, 65553, 524288, 1, 131089, 524288, 0, 196625, 524288, 1, 262161, 524288, 0, 327697, 524288, 1, 393233, 524288, 0, 458769, 524288, 1, 524305, 524288, 0, 589841, 524288, 1, 655377, 524288, 0, 720913, 524288, 1, 786449, 524288, 0, 851985, 524288, 1, 917521, 524288, 0, 983057, 524288, 1, 1048593, 524288, 0, 1114129, 524288, 1, 1179665, 524288, 0, 1245201, 524288, 1, 18, 524288, 0, 65554, 524288, 1, 131090, 524288, 0, 196626, 524288, 1, 262162, 524288, 0, 327698, 524288, 1, 393234, 524288, 0, 458770, 524288, 1, 524306, 524288, 0, 589842, 524288, 1, 655378, 524288, 0, 720914, 524288, 1, 786450, 524288, 0, 851986, 524288, 1, 917522, 524288, 1, 983058, 524288, 1, 1048594, 524288, 1, 1114130, 524288, 1, 1179666, 524288, 0, 1245202, 524288, 1, 19, 524288, 0, 65555, 524288, 1, 131091, 524288, 0, 196627, 524288, 1, 262163, 524288, 0, 327699, 524288, 1, 393235, 524288, 0, 458771, 524288, 1, 524307, 524288, 0, 589843, 524288, 1, 655379, 524288, 0, 720915, 524288, 1, 786451, 524288, 0, 851987, 524288, 1, 917523, 524288, 1, 983059, 524288, 1, 1048595, 524288, 1, 1114131, 524288, 1, 1179667, 524288, 0, 1245203, 524288, 1, 20, 524288, 0, 65556, 524288, 1, 131092, 524288, 0, 196628, 524288, 1, 262164, 524288, 0, 327700, 524288, 1, 393236, 524288, 0, 458772, 524288, 1, 524308, 524288, 0, 589844, 524288, 1, 655380, 524288, 0, 720916, 524288, 1, 786452, 524288, 0, 851988, 524288, 1, 917524, 524288, 1, 983060, 524288, 1, 1048596, 524288, 1, 1114132, 524288, 1, 1179668, 524288, 0, 1245204, 524288, 1, 21, 524288, 0, 65557, 524288, 1, 131093, 524288, 0, 196629, 524288, 1, 262165, 524288, 0, 327701, 524288, 1, 393237, 524288, 0, 458773, 524288, 1, 524309, 524288, 0, 589845, 524288, 1, 655381, 524288, 0, 720917, 524288, 1, 786453, 524288, 0, 851989, 524288, 1, 917525, 524288, 1, 983061, 524288, 1, 1048597, 524288, 1, 1114133, 524288, 1, 1179669, 524288, 0, 1245205, 524288, 1, 22, 524288, 0, 65558, 524288, 1, 131094, 524288, 0, 196630, 524288, 1, 262166, 524288, 0, 327702, 524288, 1, 393238, 524288, 0, 458774, 524288, 1, 524310, 524288, 0, 589846, 524288, 1, 655382, 524288, 0, 720918, 524288, 1, 786454, 524288, 0, 851990, 524288, 1, 917526, 524288, 1, 983062, 524288, 1, 1048598, 524288, 1, 1114134, 524288, 1, 1179670, 524288, 0, 1245206, 524288, 1, 23, 524288, 0, 65559, 524288, 1, 131095, 524288, 0, 196631, 524288, 1, 262167, 524288, 1, 327703, 524288, 1, 393239, 524288, 1, 458775, 524288, 1, 524311, 524288, 0, 589847, 524288, 1, 655383, 524288, 0, 720919, 524288, 1, 786455, 524288, 0, 851991, 524288, 1, 917527, 524288, 0, 983063, 524288, 1, 1048599, 524288, 0, 1114135, 524288, 1, 1179671, 524288, 0, 1245207, 524288, 1, 24, 524288, 0, 65560, 524288, 1, 131096, 524288, 0, 196632, 524288, 1, 262168, 524288, 1, 327704, 524288, 1, 393240, 524288, 1, 458776, 524288, 1, 524312, 524288, 0, 589848, 524288, 1, 655384, 524288, 1, 720920, 524288, 1, 786456, 524288, 0, 851992, 524288, 1, 917528, 524288, 0, 983064, 524288, 1, 1048600, 524288, 0, 1114136, 524288, 1, 1179672, 524288, 0, 1245208, 524288, 1, 25, 524288, 0, 65561, 524288, 1, 131097, 524288, 0, 196633, 524288, 1, 262169, 524288, 1, 327705, 524288, 1, 393241, 524288, 1, 458777, 524288, 1, 524313, 524288, 0, 589849, 524288, 1, 655385, 524288, 1, 720921, 524288, 1, 786457, 524288, 0, 851993, 524288, 1, 917529, 524288, 0, 983065, 524288, 1, 1048601, 524288, 0, 1114137, 524288, 1, 1179673, 524288, 0, 1245209, 524288, 1, 26, 524288, 0, 65562, 524288, 1, 131098, 524288, 0, 196634, 524288, 1, 262170, 524288, 1, 327706, 524288, 1, 393242, 524288, 1, 458778, 524288, 1, 524314, 524288, 0, 589850, 524288, 1, 655386, 524288, 1, 720922, 524288, 1, 786458, 524288, 0, 851994, 524288, 1, 917530, 524288, 0, 983066, 524288, 1, 1048602, 524288, 0, 1114138, 524288, 1, 1179674, 524288, 0, 1245210, 524288, 1, 27, 524288, 0, 65563, 524288, 1, 131099, 524288, 0, 196635, 524288, 1, 262171, 524288, 1, 327707, 524288, 1, 393243, 524288, 1, 458779, 524288, 1, 524315, 524288, 0, 589851, 524288, 1, 655387, 524288, 1, 720923, 524288, 1, 786459, 524288, 0, 851995, 524288, 1, 917531, 524288, 0, 983067, 524288, 1, 1048603, 524288, 0, 1114139, 524288, 1, 1179675, 524288, 0, 1245211, 524288, 1, 28, 524288, 0, 65564, 524288, 1, 131100, 524288, 0, 196636, 524288, 1, 262172, 524288, 1, 327708, 524288, 1, 393244, 524288, 1, 458780, 524288, 1, 524316, 524288, 0, 589852, 524288, 1, 655388, 524288, 0, 720924, 524288, 1, 786460, 524288, 0, 851996, 524288, 1, 917532, 524288, 0, 983068, 524288, 1, 1048604, 524288, 0, 1114140, 524288, 1, 1179676, 524288, 0, 1245212, 524288, 1, 29, 524288, 0, 65565, 524288, 1, 131101, 524288, 0, 196637, 524288, 1, 262173, 524288, 0, 327709, 524288, 1, 393245, 524288, 0, 458781, 524288, 1, 524317, 524288, 0, 589853, 524288, 1, 655389, 524288, 0, 720925, 524288, 1, 786461, 524288, 0, 851997, 524288, 1, 917533, 524288, 0, 983069, 524288, 1, 1048605, 524288, 0, 1114141, 524288, 1, 1179677, 524288, 0, 1245213, 524288, 1, 30, 524288, 0, 65566, 524288, 1, 131102, 524288, 0, 196638, 524288, 1, 262174, 524288, 0, 327710, 524288, 1, 393246, 524288, 1, 458782, 524288, 1, 524318, 524288, 1, 589854, 524288, 1, 655390, 524288, 1, 720926, 524288, 1, 786462, 524288, 1, 851998, 524288, 1, 917534, 524288, 0, 983070, 524288, 1, 1048606, 524288, 0, 1114142, 524288, 1, 1179678, 524288, 0, 1245214, 524288, 1, 31, 524288, 0, 65567, 524288, 1, 131103, 524288, 0, 196639, 524288, 1, 262175, 524288, 0, 327711, 524288, 1, 393247, 524288, 1, 458783, 524288, 1, 524319, 524288, 1, 589855, 524288, 1, 655391, 524288, 1, 720927, 524288, 1, 786463, 524288, 1, 851999, 524288, 1, 917535, 524288, 0, 983071, 524288, 1, 1048607, 524288, 0, 1114143, 524288, 1, 1179679, 524288, 0, 1245215, 524288, 1, 32, 524288, 0, 65568, 524288, 1, 131104, 524288, 0, 196640, 524288, 1, 262176, 524288, 0, 327712, 524288, 1, 393248, 524288, 1, 458784, 524288, 1, 524320, 524288, 1, 589856, 524288, 1, 655392, 524288, 1, 720928, 524288, 1, 786464, 524288, 1, 852000, 524288, 1, 917536, 524288, 0, 983072, 524288, 1, 1048608, 524288, 0, 1114144, 524288, 1, 1179680, 524288, 0, 1245216, 524288, 1, 33, 524288, 0, 65569, 524288, 1, 131105, 524288, 0, 196641, 524288, 1, 262177, 524288, 0, 327713, 524288, 1, 393249, 524288, 0, 458785, 524288, 1, 524321, 524288, 0, 589857, 524288, 1, 655393, 524288, 0, 720929, 524288, 1, 786465, 524288, 0, 852001, 524288, 1, 917537, 524288, 0, 983073, 524288, 1, 1048609, 524288, 0, 1114145, 524288, 1, 1179681, 524288, 0, 1245217, 524288, 1, 34, 524288, 0, 65570, 524288, 1, 131106, 524288, 0, 196642, 524288, 1, 262178, 524288, 0, 327714, 524288, 1, 393250, 524288, 0, 458786, 524288, 1, 524322, 524288, 0, 589858, 524288, 1, 655394, 524288, 0, 720930, 524288, 1, 786466, 524288, 0, 852002, 524288, 1, 917538, 524288, 0, 983074, 524288, 1, 1048610, 524288, 0, 1114146, 524288, 1, 1179682, 524288, 0, 1245218, 524288, 1, 35, 524288, 0, 65571, 524288, 1, 131107, 524288, 0, 196643, 524288, 1, 262179, 524288, 0, 327715, 524288, 1, 393251, 524288, 0, 458787, 524288, 1, 524323, 524288, 0, 589859, 524288, 1, 655395, 524288, 0, 720931, 524288, 1, 786467, 524288, 0, 852003, 524288, 1, 917539, 524288, 0, 983075, 524288, 1, 1048611, 524288, 0, 1114147, 524288, 1, 1179683, 524288, 0, 1245219, 524288, 1)
layer_1/name = "mid"
layer_1/tile_data = PackedInt32Array(33, 0, 6, 65569, 0, 7, 131105, 0, 8, 34, 65536, 6, 65570, 65536, 7, 131106, 0, 5, 35, 131072, 6, 65571, 131072, 7, 131107, 65536, 5, 393250, 0, 5, 458786, 0, 6, 524322, 0, 7, 393251, 65536, 5, 458787, 65536, 6, 524323, 65536, 7, 655394, 0, 5, 720930, 0, 6, 786466, 0, 7, 655395, 65536, 5, 720931, 65536, 6, 786467, 65536, 7, 917538, 0, 5, 983074, 0, 6, 1048610, 0, 7, 917539, 65536, 5, 983075, 65536, 6, 1048611, 65536, 7, 196642, 0, 6, 262178, 0, 7, 196643, 65536, 6, 262179, 65536, 7, 1245184, 65536, 8, 1245185, 131072, 8, 1245186, 131072, 5, 1245218, 0, 8, 1245219, 65536, 8, 0, 65536, 5, 65536, 65536, 6, 131072, 65536, 7, 196608, 65536, 8, 1, 131072, 5, 65537, 131072, 6, 131073, 131072, 7, 196609, 131072, 8, 262144, 65536, 5, 393216, 65536, 7, 458752, 65536, 8, 262145, 131072, 5, 393217, 131072, 7, 458753, 131072, 8, 327680, 65536, 6, 327681, 131072, 6, 524288, 65536, 5, 589824, 65536, 6, 655360, 65536, 7, 720896, 65536, 8, 524289, 131072, 5, 589825, 131072, 6, 655361, 131072, 7, 720897, 131072, 8, 786432, 65536, 5, 851968, 65536, 6, 917504, 65536, 7, 983040, 65536, 8, 786433, 131072, 5, 851969, 131072, 6, 917505, 131072, 7, 983041, 131072, 8, 1048576, 65536, 5, 1114112, 65536, 6, 1179648, 65536, 7, 1048577, 131072, 5, 1114113, 131072, 6, 1179649, 131072, 7)
layer_2/name = "front"
layer_2/tile_data = PackedInt32Array(34, 0, 5, 65570, 0, 6, 131106, 0, 7, 35, 65536, 5, 65571, 65536, 6, 131107, 65536, 7, 262178, 0, 5, 327714, 0, 6, 393250, 0, 7, 262179, 65536, 5, 327715, 65536, 6, 393251, 65536, 7, 589858, 0, 6, 655394, 0, 7, 589859, 65536, 6, 655395, 65536, 7, 786466, 0, 5, 852002, 0, 6, 917538, 0, 7, 786467, 65536, 5, 852003, 65536, 6, 917539, 65536, 7, 1245218, 131072, 5, 1048611, 65536, 5, 1114147, 65536, 6, 1179683, 65536, 7, 1245186, 0, 5, 1245187, 65536, 5, 1245188, 131072, 5, 1245189, 0, 5, 1245190, 65536, 5, 1245191, 131072, 5, 1245192, 0, 5, 1245193, 65536, 5, 1245194, 131072, 5, 1245195, 0, 5, 1245196, 65536, 5, 1245197, 131072, 5, 1245198, 0, 5, 1245199, 65536, 5, 1245200, 131072, 5, 1245201, 0, 5, 1245202, 65536, 5, 1245203, 131072, 5, 1245204, 0, 5, 1245205, 65536, 5, 1245206, 131072, 5, 1245207, 0, 5, 1245208, 65536, 5, 1245209, 131072, 5, 1245210, 0, 5, 1245211, 65536, 5, 1245212, 131072, 5, 1245213, 0, 5, 1245214, 65536, 5, 1245215, 131072, 5, 1245216, 0, 5, 1245217, 65536, 5, 9, 0, 6, 65545, 0, 7, 131081, 0, 8, 10, 65536, 6, 65546, 65536, 7, 131082, 65536, 8, 11, 131072, 6, 65547, 131072, 7, 131083, 131072, 8, 12, 0, 6, 65548, 0, 7, 131084, 0, 8, 13, 65536, 6, 65549, 65536, 7, 131085, 65536, 8, 14, 131072, 6, 65550, 131072, 7, 131086, 131072, 8, 15, 0, 6, 65551, 0, 7, 131087, 0, 8, 16, 65536, 6, 65552, 65536, 7, 131088, 65536, 8, 17, 131072, 6, 65553, 131072, 7, 131089, 131072, 8, 18, 0, 6, 65554, 0, 7, 131090, 0, 8, 19, 65536, 6, 65555, 65536, 7, 131091, 65536, 8, 20, 131072, 6, 65556, 131072, 7, 131092, 131072, 8, 21, 0, 6, 65557, 0, 7, 131093, 0, 8, 22, 65536, 6, 65558, 65536, 7, 131094, 65536, 8, 23, 131072, 6, 65559, 131072, 7, 131095, 131072, 8, 24, 0, 6, 65560, 0, 7, 131096, 0, 8, 25, 65536, 6, 65561, 65536, 7, 131097, 65536, 8, 26, 131072, 6, 65562, 131072, 7, 131098, 131072, 8, 27, 0, 6, 65563, 0, 7, 131099, 0, 8, 28, 65536, 6, 65564, 65536, 7, 131100, 65536, 8, 29, 131072, 6, 65565, 131072, 7, 131101, 131072, 8, 30, 0, 6, 65566, 0, 7, 131102, 0, 8, 31, 65536, 6, 65567, 65536, 7, 131103, 65536, 8, 32, 131072, 6, 65568, 131072, 7, 131104, 131072, 8, 1048610, 0, 5, 1114146, 0, 6, 1179682, 0, 7, 1245219, 0, 5, 524322, 0, 5, 524323, 65536, 5, 1245184, 65536, 5, 1245185, 131072, 5)

[node name="passage_area" parent="TileMap" instance=ExtResource("2_1ddcw")]
position = Vector2(86, 15)
scale = Vector2(1.71829, 2.52895)
target_area = "res://scenes/outdoor_scene.tscn"
player_position = Vector2(255, 575)

[node name="StaticBody2D" type="StaticBody2D" parent="TileMap"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PackedVector2Array(18, 0, 14, 308, 559, 313.5, 557, 26, 157.5, 29.5, 157.5, -1, 577.5, -1, 575, 321, -1, 322, 1.5, 1)

[node name="Player" parent="." instance=ExtResource("1_hkoe8")]
position = Vector2(160, 128)

[node name="tree_spawn_markers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(968, 128)

[node name="Marker2D2" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(968, 264)

[node name="Marker2D3" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(960, 448)

[node name="Marker2D4" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(778, 512)

[node name="Marker2D5" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(569, 514)

[node name="Marker2D6" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(415, 418)

[node name="Marker2D7" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(605, 391)

[node name="Marker2D8" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(797, 332)

[node name="Marker2D9" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(739, 175)

[node name="Marker2D10" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(576, 128)

[node name="Marker2D11" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(264, 504)

[node name="Marker2D12" type="Marker2D" parent="tree_spawn_markers"]
position = Vector2(128, 440)

[node name="filter_rect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0.054902, 0.0352941, 0.160784, 0.529412)

[node name="tree_group" type="Node2D" parent="."]

[node name="Canvas" type="Node2D" parent="."]

[node name="HUD" parent="Canvas" instance=ExtResource("3_e0pml")]

[node name="game_over_screen" parent="Canvas" instance=ExtResource("6_3gcfr")]

[node name="pause_menu" parent="Canvas" instance=ExtResource("4_ema30")]
visible = false

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="TileMap/passage_area" to="." method="_on_passage_area_body_entered"]
